remove fontawesome dependency, fix tours

--- a/client/src/stylesheets/application.scss
+++ b/client/src/stylesheets/application.scss
@@ -13,5 +13,6 @@
 @import "splash.scss";
 @import "tour.scss";
 @import "credits.scss";
+@import "icons.scss";
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
