--- a/client/src/stylesheets/nav.scss
+++ b/client/src/stylesheets/nav.scss
@@ -8,10 +8,11 @@
   font-family: 'VT323', monospace;
   font-size: 36px;
   box-sizing: border-box;
-  z-index: 3;
+  z-index: 400;
   position: fixed;
   width: 100vw;
   padding: 0 1rem;
+  overflow: visible;
 }
 
 .nav-bar-spacer {
