--- a/client/src/stylesheets/splash.scss
+++ b/client/src/stylesheets/splash.scss
@@ -56,6 +56,8 @@
 
   border-radius: 5px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+
+  z-index: 0;
 }
 
 /*Light blue cover above the slide show*/
